Optimize `Enumerable#grep{_v}`

[Bug #17030]